# soft65c02

./: .ctags  .gitignore  .travis.yml  Cargo.toml  README.md  justfile
examples/: disassemble.rs  minifb.rs  point.rs  read.rs
soft65c02_graphics/: Cargo.toml  README.md
soft65c02_graphics/examples/: minifb.rs  pixels.rs
soft65c02_graphics/examples/gfx_demo/: README.md  compile.sh  game.cfg  game.rs  game.s  gol.rs  help.rs  mandlebrot.rs  min_crt0.s  sfc.rs
soft65c02_graphics/src/: lib.rs  minifb_backend.rs  pixels_backend.rs
soft65c02_lib/: Cargo.toml  README.md
soft65c02_lib/src/: addressing_mode.rs  lib.rs  processing_unit.rs  registers.rs
soft65c02_lib/src/cpu_instruction/: cpu_instruction.rs  mod.rs
soft65c02_lib/src/cpu_instruction/microcode/: adc.rs  and.rs  asl.rs  bbr.rs  bbs.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  bra.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  mod.rs  nop.rs  ora.rs  pha.rs  (+30 more)
soft65c02_lib/src/memory/: error.rs  memory_stack.rs  minifb_sub.rs  mod.rs  ram.rs  rom.rs
soft65c02_lib/tests/: disassembler.rs  simulator.rs
soft65c02_studio/: Cargo.toml  specifications.md
soft65c02_tester/: Cargo.toml  README.md  documentation.md  rules.pest  source_boolex.rs
soft65c02_tester/src/: apple_single.rs  atari_binary.rs  commands.rs  disassembler.rs  displayer.rs  executor.rs  lib.rs  main.rs  pest_parser.rs  symbols.rs  until_condition.rs  utils.rs
soft65c02_tester/tests/: asserter.rs  displayer.rs  executor.rs  low_high.txt  register.rs  symbols.txt  test_apple.txt  test_atari.txt  test_hex_escapes.txt  test_hex_escapes_edge_cases.txt  test_interactive_simulation.txt  test_line_continuation_clean.txt  test_registers.txt  working_scenario-01.soft65c02.txt  working_scenario-02.soft65c02.txt
soft65c02_unit/: Cargo.toml  README.md  example_with_flags.yaml
soft65c02_unit/base_config_example/: atari.yaml  config_min_atari.cfg
soft65c02_unit/examples/full_setup_test/base_configs/: atari.yaml  basic.cfg  crt0.s
soft65c02_unit/examples/full_setup_test/src/: fn_under_test.s
soft65c02_unit/examples/full_setup_test/tests/: test1.txt  test1.yaml
soft65c02_unit/examples/simple_test/base_configs/: atari.yaml  config_min_atari.cfg  crt0.s  min_crt0.s  simple.cfg  simple.yaml
soft65c02_unit/examples/simple_test/src/: fn_under_test.s  test_runner.s
soft65c02_unit/examples/simple_test/src/bar/: util.s
soft65c02_unit/examples/simple_test/src/foo/: util.s
soft65c02_unit/examples/simple_test/tests/: my_test.txt  my_test.yaml  test_script.txt  your_test.yaml
soft65c02_unit/src/: compiler.rs  config.rs  executor.rs  lib.rs  main.rs  runner.rs
soft65c02_unit/src/compiler/: cc65.rs
src/: addressing_mode.rs  cli.pest  cpu_instruction.rs  lib.rs  main.rs  memory.rs  processing_unit.rs  registers.rs  source_boolex.rs
src/cpu_instruction/: cpu_instruction.rs  (+1 more)
tests/: disassembler.rs  minifb.rs  simulator.rs
(+76 files in other folders)
