[package]
name = "soft65c02"
version = "0.1.0"
authors = ["greg <hubert.greg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
range-map = "0.1.5"
minifb = "0.15.1"
rustyline = "5.0.6"
structopt = "0.3.8"
hex = "0.4.0"
