[package]
name = "soft65c02_graphics"
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

[dependencies]
soft65c02_lib = { path = "../soft65c02_lib" }
soft65c02_tester = { path = "../soft65c02_tester" }
minifb = { version = "0.15.1", optional = true }
pixels = { version = "0.13", optional = true }
winit = { version = "0.28", optional = true }
rand = "0.9.1"

[features]
default = []  # Empty default features
minifb-backend = ["minifb"]
pixels-backend = ["pixels", "winit"]

[[example]]
name = "minifb"
path = "examples/minifb.rs"
required-features = ["minifb-backend"]

[[example]]
name = "pixels"
path = "examples/pixels.rs"
required-features = ["pixels-backend"]

[[example]]
name = "game"
path = "examples/gfx_demo/game.rs"
required-features = ["pixels-backend"] 