[package]
name = "soft65c02_tester"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
pest = "2.7.8"
pest_derive = "2.7.8"
soft65c02_lib = { path = "../soft65c02_lib" }
